# memdir

./: CMakeLists.txt  README.md  compat.h  memdir.c  memdir.h  misc.c  misc.h  test-suites.h  test.c  test.h
cmake/modules/: FindGLIB2.cmake
test/: memdir.c
